[gd_scene load_steps=6 format=2]

[ext_resource path="res://mic/fonts/Tfont.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/sprites/mic/souls/determinacion_toon.png" type="Texture" id=2]
[ext_resource path="res://mic/menu/main.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/gui/box_sq.png" type="Texture" id=4]
[ext_resource path="res://assets/music/menu0.ogg" type="AudioStream" id=5]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="gui" type="TextureRect" parent="main"]
margin_left = 180.0
margin_top = 100.0
margin_right = 880.0
margin_bottom = 480.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tfont" parent="main" instance=ExtResource( 1 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 320.0
margin_top = 160.0
margin_right = -464.0
margin_bottom = -310.0
rect_scale = Vector2( 2, 2 )
text = "Jugar
Rincon Musical
Salir"
align = 3
valign = 3

[node name="sec1" type="Position2D" parent="main/Tfont"]
position = Vector2( -20, 20 )
__meta__ = {
"_edit_lock_": true
}

[node name="sec2" type="Position2D" parent="main/Tfont"]
position = Vector2( -20, 65 )
__meta__ = {
"_edit_lock_": true
}

[node name="sec3" type="Position2D" parent="main/Tfont"]
position = Vector2( -20, 110 )
__meta__ = {
"_edit_lock_": true
}

[node name="sel" type="Sprite" parent="main/Tfont"]
position = Vector2( -50, -170 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tfont" parent="." instance=ExtResource( 1 )]
margin_top = 560.0
margin_right = 81.0
margin_bottom = 599.0
text = "Underdom Pre-Alfa 0.2.0"
